--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,16 @@
-
+#server.port=8110
 spring.application.name=vehicles-api
 
 # Configuration Database
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://192.168.88.26:3306/vehicles-api?useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.88.64:3306/vehicles-api?useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 
 spring.datasource.username=user
 spring.datasource.password=user
 
 #Eureka
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.serviceUrl.defaultZone=http://192.168.88.64:8079\
-  /eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.88.64:8079/eureka/
 
 eureka.instance.lease-expiration-duration-in-seconds=1
 eureka.instance.lease-renewal-interval-in-seconds=1
